# calorie-tracker

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
pages/: 1_Profile.py  2_Log_Meal.py  3_Dashboard.py
src/data/: dri.json
src/db/: database.py  models.py
src/services/: bmr.py  dri.py  usda.py
src/ui/: css.py  sidebar.py  theme.py
tests/: test_bmr.py  test_db.py  test_dri.py  test_usda_api.py  test_usda_utils.py
