[project]
name = "calorie-tracker"
version = "0.1.0"
description = "Personal calorie and nutrition tracking app"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
